compiler/testData/diagnostics/tests/properties/inferenceFromGetters/blockBodyGetter.kt
<!PROPERTY_WITH_NO_TYPE_NO_INITIALIZER!>val x<!> get() {
    return 1
}
